tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-match-at-binding-unwrapped.new.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-hidden-via-match-at-binding-unwrapped.rs:28:18
   |
LL |         x @ I => x.show(),
   |                  ^^^^^^^^ expected `IShow`, found `OnIShow`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
